--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "keksobooking",
   "version": "26.0.0",
   "private": true,
-  "description": "Личный проект «{{projectTitle}}» от HTML Academy",
+  "description": "Личный проект «Кексобукинг»",
   "repository": {
     "type": "git",
     "url": "{{sshUrl}}"
